<resources>
    <string name="app_name">WeatherWise</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_alert">Alert</string>
    <string name="menu_settings">Settings</string>
    <string name="weather_in_c">16 °C</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="sea_level">Sea level</string>
    <string name="visibility">Visibility</string>
    <string name="arabic_radioButton_tv">Arabic</string>
    <string name="english_radioButton_language">English</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="menu_home">Home</string>
    <string name="save">Save</string>
    <string name="language_settings">Language</string>
    <string name="location_settings">Location</string>
    <string name="celsius_rb">Celsius</string>
    <string name="temperature_settings">Temperature</string>
    <string name="fahrenheit_rb">Fahrenheit</string>
    <string name="kelvin_rb">Kelvin</string>
    <string name="meter_per_second_rb">Meter / Second</string>
    <string name="mile_per_hour_rb">Mile / Hour</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="settings">Settings</string>
    <string name="weather_nav_header">Weather</string>
    <string name="dash">-</string>
    <string name="notification_cv">Notification</string>
    <string name="notification_rb">Notification</string>
    <string name="alarm_rb">Alarm</string>
    <string name="ok">OK</string>
    <string name="alarm">Alarm</string>
    <string name="couldn_t_fetch_your_location">Couldn\'t fetch your location</string>
    <string name="please_allow_location_to_get_weather_in_your_area">Please allow location to get weather in your area</string>
    <string name="allow">Allow</string>
    <string name="intial_map_text">Map</string>
    <string name="intial_gps_text">GPS</string>
    <string name="intial_location_text">Location</string>
    <string name="initial_setup_title_text">Initial Setup</string>
    <string name="Loading">"Loading"</string>
    <string name="AlertFragment_Error_while_fetching_alerts">"Error while fetching alerts"</string>
    <string name="fetching_favorite_places_please_wait">"Fetching favorite places, please wait"</string>
    <string name="Something_went_wrong">"Something went wrong"</string>
    <string name="there_are_no_favorite_places">"there are no favorite places"</string>
    <string name="Error_while_fetching_the_data">"Error while fetching the data"</string>
    <string name="No_internet_connection">No internet connection</string>
    <string name="no_cached_file_for_hours_list">"No cached file for hours list</string>
    <string name="no_cached_file_for_day_list">"No cached file for day list</string>
    <string name="no_cached_file_current_weather">No cashed file for current weather</string>
    <string name="Confirm_Deletion">Confirmation</string>
    <string name="Are_you_sure_you_want_to_remove_this_favorite_place">"Are you sure you want to remove this favorite place?"</string>
    <string name="Yes">Yes</string>
    <string name="No">"No"</string>

</resources>