<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/initalFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weatherwise.ui.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="latitude"
            app:argType="float" />
        <argument
            android:name="longitude"
            app:argType="float" />
    </fragment>

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.weatherwise.ui.favorite.view.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_nav_favorite_to_favoriteMap2"
            app:destination="@id/map_favorite" />
        <action
            android:id="@+id/action_nav_favorite_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_alert"
        android:name="com.example.weatherwise.ui.alert.view.AlertFragment"
        android:label="@string/menu_alert"
        tools:layout="@layout/fragment_alert" >
        <action
            android:id="@+id/action_nav_alert_to_alertMap"
            app:destination="@id/alertMap" />
        <argument
            android:name="latitude"
            app:argType="float" />
        <argument
            android:name="longitude"
            app:argType="float" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.weatherwise.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>

    <dialog
        android:id="@+id/initalFragment"
        android:name="com.example.weatherwise.initalFragment.InitalFragment"
        android:label="fragment_inital"
        tools:layout="@layout/fragment_inital" >
        <action
            android:id="@+id/action_initalFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_initalFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </dialog>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.weatherwise.ui.map.MapFragment"
        android:label="fragment_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_mapFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/map_favorite"
        android:name="com.example.weatherwise.ui.favorite.view.FavoriteMap"
        android:label="map"
        tools:layout="@layout/fragment_favorite_map" />
    <fragment
        android:id="@+id/alertMap"
        android:name="com.example.weatherwise.ui.alert.view.AlertMap"
        android:label="fragment_alert_map"
        tools:layout="@layout/fragment_alert_map" >
        <action
            android:id="@+id/action_alertMap_to_nav_alert"
            app:destination="@id/nav_alert" />
    </fragment>

</navigation>